# POWER

./: CMakeLists.txt  QT5.15_SETUP_GUIDE.md  README.md  configure_qt515.bat  configure_qt515.sh  main.cpp
.qtcreator/: CMakeLists.txt.user.d6fd55d
src/: mainwindow.cpp  mainwindow.h  mainwindow.ui
src/modules/Login/: logindialog.cpp  logindialog.h  logindialog.ui
src/modules/WaveformView/: USAGE_EXAMPLE.md  waveformwidget.cpp  waveformwidget.h  waveformwidget.ui
